--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -673,7 +673,7 @@ const { title = 'Nebraska Lounge & Grill', subtitle = 'Savour Our Tasty Dishes' 
             </a>
         </div>
         <p>© 2025 Nebraska Lounge & Grill. All Rights Reserved.</p>
-        <p>Designed By <a href="https://winkdevsolutions.com" target="_blank">WinKDev Solutions</a></p>
+        <p>Designed By <a href="https://winkdev.com" target="_blank">WinK Dev Solutions</a></p>
     </footer>
 
     <!-- JavaScript for Ordering and Slideshow -->
